--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,1 +1,25 @@
-<h1>Hello world!!</h1>
+<div class="body2">
+        <h1>Hello world!</h1>
+        <p> i will buy you some chicken if you buy my <br>products its a win win situation.</p>
+        <strong>Hello world!</strong>
+        <title>TO Do List Application</title>\
+        <a href="https://www.youtube.com/watch?v=W6gc1rhEihw"><h1>Workshop Todo List</h1><a>
+        <a href="show.html">Show.css</a>
+         </div>
+        <div class="body3">
+            <ul>
+                <li id="turtle"><input type="radio"/>Turtles
+                </li>
+                <li class="chicken"> 
+                    <input type="checkbox">buy workshop supplies
+                </li>
+              
+                <li class="chicken"> <input type="checkbox">make the curriclum 4 promodoros</li>            
+            </ul>
+              
+            <div id="new-todo-block">
+              <input class="text-input" id="new-todo-description" type="text" placeholder="Add a new todo...">
+              <input class="button" id="add-new-todo-button" type="submit" value="Add todo">
+            </div>
+        
+        </div>
