--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,27 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+
+h1{
+    color: black;
+}
+
+.chicken {
+    color: white;
+}
+#turtle{
+    color:white;
+    
+}
+body{
+    padding-left: 40px;
+    padding-right:40px;
+    background-color:black;
+    
+}
+.body2{
+    background-image:url(https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAteAAAAJGUzNjBiYjk5LWU5OWItNDc0Ny1iYjRhLTU3YzY2Y2EwZWE4Yw.jpg);
+    padding: 40px;
+    background-position: center;
+}
+.body3{
+    background-color:black;
+    color:white;
+}
