--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,5 +1,5 @@
     <div class="body2">
-        <h1>Hello world!</h1>
+        <h1 class= "fire">Hello world!</h1>
         <p> i will buy you some chicken if you buy my <br>products its a win win situation.</p>
         <strong>Hello world!</strong>
         <title>TO Do List Application</title>\
@@ -24,5 +24,6 @@
             </div>
         
         </div>
+    
         
         
