--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,2 +1,15 @@
-<h1>HELLO WORLD!!!!!!</h1>
-            
+<%= params[:id]%>
+<h1 class="fire">HELLO WORLD!!!!!!</h1>
+<h1>
+     Workshop Todo List
+   </h1>
+
+   <div>
+     <input type="checkbox">
+     <h2><%= @todo_description %></h2>
+     <span><%= @todo_pomodoro_estimate %> pomodoros</span>
+     <a href="#" id="edit-todo-button">Edit</a>
+     <a href="#" id="delete-todo-button">Delete</a>
+     <a href="index.html" class="simple-link">Go back...</a>
+   </div>
+<%= @todo_estimate %>
