--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,3 +1,9 @@
+
+  
+  
+  
+  
+  
     <div class="body2">
         <h1 class= "fire">Hello world!</h1>
         <p> i will buy you some chicken if you buy my <br>products its a win win situation.</p>
@@ -12,10 +18,15 @@
                 <li id="turtle"><input type="radio"/>Turtles
                 </li>
                 <li class="chicken"> 
-                    <input type="checkbox">buy workshop supplies
+                    <input type="checkbox">
+                    <a href>"show/1">buy workshop supplies </a>
+                    <span class="pomodoros2"> 2 pomodoros</span>
                 </li>
               
-                <li class="chicken"> <input type="checkbox">make the curriclum 4 promodoros</li>            
+                <li class="chicken"> <input type="checkbox">  
+                <a href>"show/1">make the curriclum 4 promodoros  </a>
+                    <span class="pomodoros2"> 3 pomodoros</span>
+                    </li>
             </ul>
               
             <div id="new-todo-block">
