--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@ h1{
 body{
     padding-left: 40px;
     padding-right:40px;
-    background-color:black;
+    background-color:blue;
     
 }
 .body2{
