--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -4,9 +4,9 @@
      Workshop Todo List
    </h1>
 
-   <div>
+   <div class="card">
      <input type="checkbox">
-     <h2><%= @todo_description %></h2>
+     <h3>Todo #<%= @todo.id %></h3>
      <span><%= @todo_pomodoro_estimate %> pomodoros</span>
      <a href="#" id="edit-todo-button">Edit</a>
      <a href="#" id="delete-todo-button">Delete</a>
